# BVPSolver

./: .gitmodules  CMakeLists.txt  Текстовый документ.txt
src/: CMakeLists.txt
src/Solver/LinProblem/: ConnGraph.h  LinearProblem.cpp  LinearProblem.h  MatrixCSR.cpp  MatrixCSR.h  SparsityPattern.cpp  SparsityPattern.h
test/: CMakeLists.txt  ConGraphCart1D_test.cpp  ConGraphCart2D_test.cpp  SparsityPattern_test.cpp
